# chatgpt-subsystems

./: Cargo.toml
assets/: basic.prompt.liquid
src/: api.rs  client.rs  lib.rs  xml_dsl.rs
