[package]
name = "chatgpt-subsystems"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.0"
futures = "0.3"
scraper = "0.18.1"
liquid = "0.26.4"
glob = "0.3.1"
unindent = "0.2.3"
rayon = "1.8.0"
itertools = "0.12.0"
schemars = "0.8.16"
colored = "2.1.0"